# bankai

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
bankai/: __init__.py  cli.py  patch.py  probes.py  search.py
bankai/backends/: __init__.py  base.py  gguf_backend.py  mlx_backend.py
bankai/runners/: __init__.py  modal_runner.py
experiments/: 01_random_flips.py  02_logit_steering.py  03_patch_search.py  04_calculus_patch.py  05_variation_testing.py  06_generalization_search.py  07_gsm8k_safety.py
paper/: bankai.tex
patches/: calculus_generalized_v1.json  calculus_v1.json  patch_math_v1.json
results/: experiment2_results.json  experiment_results.json
